fix: alignment of about and contact

--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -32,7 +32,7 @@
     color:white;
 }
 .navbar_contact{
-    margin-top:20px;
+    margin-top:19px;
     margin-left: 28px;
 }
 .navbar_dropdown{
